--- a/.github/workflows/wflow.yml
+++ b/.github/workflows/wflow.yml
@@ -6,7 +6,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/seyup-node@v1
+      - uses: actions/setup-node@v1
       - name: run setup
         run: make setup
       - name: run tests
