--- a/.github/workflows/wflow.yml
+++ b/.github/workflows/wflow.yml
@@ -7,9 +7,24 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+        with: 
+          node-version: 16
+          cache: 'npm'
       - name: run setup
         run: make setup
       - name: run tests
         run: make test
       - name: run linter
         run: make lint
+
+name: synk
+on: push
+jobs:
+  security:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: action/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        env: 
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
