--- a/.github/workflows/wflow.yml
+++ b/.github/workflows/wflow.yml
@@ -1,4 +1,4 @@
-name: setup/tests/lint
+name: project CI
 on: push
 jobs:
   build: 
@@ -10,19 +10,11 @@ jobs:
         with: 
           node-version: 16
           cache: 'npm'
-      - name: run setup
-        run: make setup
-      - name: run tests
-        run: make test
-      - name: run linter
-        run: make lint
+        
+      - run: make setup
+      - run: make test
+      - run: make lint
 
-name: synk
-on: push
-jobs:
-  security:
-    runs-on: ubuntu-latest
-    steps:
       - uses: action/checkout@master
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
