--- a/.github/workflows/wflow.yml
+++ b/.github/workflows/wflow.yml
@@ -6,6 +6,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      - uses: snyk/actions/node@v2 
+	env: 
+	  SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
       - uses: actions/setup-node@v2
         with: 
           node-version: 16
@@ -14,9 +19,3 @@ jobs:
       - run: make setup
       - run: make test
       - run: make lint
-
-      - uses: action/checkout@master
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
-        env: 
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
