--- a/.github/workflows/wflow.yml
+++ b/.github/workflows/wflow.yml
@@ -6,11 +6,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
-      - uses: snyk/actions/node@v0.3.0 
-	env: 
-	  SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-
       - uses: actions/setup-node@v3
         with: 
           node-version: 16
@@ -19,3 +14,9 @@ jobs:
       - run: make setup
       - run: make test
       - run: make lint
+
+      - uses: actions/checkout@master
+      - name: Run Snyk to check vulnerabilities
+        uses: snyk/actions/node@master
+        env: 
+	  SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
