--- a/.github/workflows/wflow.yml
+++ b/.github/workflows/wflow.yml
@@ -1,5 +1,7 @@
 name: project CI
+
 on: push
+
 jobs:
   build: 
     runs-on: ubuntu-latest
@@ -15,7 +17,7 @@ jobs:
       - run: make test
       - run: make lint
 
-      - name: Run Snyk to check vulnerabilities
+      - name: Run Snyk
         uses: snyk/actions/node@master
         env: 
-	  SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
